[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
token = { path = "../token" }
parser = { path = "../parser" }
evaluator = { path = "../evaluator" }
object = { path = "../object" }
